force-app/main/default/objects/Opportunity/fields/AceleraiAgenciasSubscriberAgencyName__c.field-meta.xml
<CustomField>
    <fullName>AceleraiAgenciasSubscriberAgencyName__c</fullName>
    <description>Caso o &quot;tipo de cliente&quot; for &quot;agência&quot; e  for associado ao Aceleraí Agências, abre lista suspensa com todos os assinantes</description>
    <label>Nome da agência assinante Aceleraí Agênc</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IsAceleraiAgenciasMembership__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agência 1</fullName>
            </value>
            <value>
                <fullName>Agência 2</fullName>
            </value>
            <value>
                <fullName>Agência 3</fullName>
            </value>
            <value>
                <fullName>Agência 4</fullName>
            </value>
            <value>
                <fullName>Agência 5</fullName>
            </value>
            <value>
                <fullName>Agência 6</fullName>
            </value>
            <value>
                <fullName>Agência 7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>