force-app/main/default/objects/Opportunity/fields/AgencyName_NonSubscribed__c.field-meta.xml
<CustomField>
    <fullName>AgencyName_NonSubscribed__c</fullName>
    <label>Nome da agência (não assinante)</label>
    <length>150</length>
    <type>Text</type>
</CustomField>