force-app/main/default/objects/Opportunity/fields/Bonificacao_midia__c.field-meta.xml
<CustomField>
    <fullName>Bonificacao_midia__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ação de bonificação de mídia do SBT a partir de uma venda de varejo</description>
    <label>Bonificação Mídia</label>
    <type>Checkbox</type>
</CustomField>