force-app/main/default/objects/Opportunity/fields/CampaignStartIntention__c.field-meta.xml
<CustomField>
    <fullName>CampaignStartIntention__c</fullName>
    <description>Quando o cliente pretende iniciar a campanha.</description>
    <label>Pretensão de início da campanha</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acima de 60 dias</fullName>
                <default>true</default>
                <label>Acima de 60 dias</label>
            </value>
            <value>
                <fullName>Em 30 dias</fullName>
            </value>
            <value>
                <fullName>Em 60 dias</fullName>
            </value>
            <value>
                <fullName>Não informado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>