force-app/main/default/objects/Opportunity/fields/CelebridadesLiberadas__c.field-meta.xml
<CustomField>
    <fullName>CelebridadesLiberadas__c</fullName>
    <inlineHelpText>Lista dos nomes das celebridades permitidas pelo SCORE</inlineHelpText>
    <label>Celebridades Liberadas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>