force-app/main/default/objects/Opportunity/fields/ClonedWithMediaSBT__c.field-meta.xml
<CustomField>
    <fullName>ClonedWithMediaSBT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Esse campo é utilizado no método cloneOpportunityWithSBT() e no handleBeforeClone() como um marcador, para assegurar que o campo Media__c possa ser preenchido como &apos;&apos;sbt&apos;&apos; durante a clonagem para Varejo SBT.</description>
    <label>Clone com Mídia SBT</label>
    <type>Checkbox</type>
</CustomField>