force-app/main/default/objects/Opportunity/fields/CloseDateEstimated__c.field-meta.xml
<CustomField>
    <fullName>CloseDateEstimated__c</fullName>
    <description>&quot;Qual é a previsão de fechamento da oportunidade?&quot;</description>
    <label>Previsão de fechamento</label>
    <type>DateTime</type>
</CustomField>