force-app/main/default/objects/Opportunity/fields/CloseDateTimeStamp__c.field-meta.xml
<CustomField>
    <fullName>CloseDateTimeStamp__c</fullName>
    <formula>RIGHT(&apos;0&apos; + TEXT(MONTH(CloseDate)), 2) + &apos;/&apos; +
RIGHT(&apos;0&apos; + TEXT(DAY(CloseDate)), 2) + &apos;/&apos; +
TEXT(YEAR(CloseDate)) + &apos; &apos; +
&apos;00:00:00&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CloseDateTimeStamp</label>
    <type>Text</type>
</CustomField>