force-app/main/default/objects/Opportunity/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>Nome da empresa</description>
    <label>Empresa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>