force-app/main/default/objects/Opportunity/fields/CompletedMeetingDates__c.field-meta.xml
<CustomField>
    <fullName>CompletedMeetingDates__c</fullName>
    <description>Quais datas foram feitas reuniões com a oportunidade</description>
    <label>Datas de reunião feitas</label>
    <type>DateTime</type>
</CustomField>