force-app/main/default/objects/Opportunity/fields/ContatosMarketing__c.field-meta.xml
<CustomField>
    <fullName>ContatosMarketing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contatos do Marketing</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Contatos do Marketing)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>