force-app/main/default/objects/Opportunity/fields/ContractStartDate__c.field-meta.xml
<CustomField>
    <fullName>ContractStartDate__c</fullName>
    <description>Data em que o contrato teve início</description>
    <label>Data Início do Contrato</label>
    <type>DateTime</type>
</CustomField>