force-app/main/default/objects/Opportunity/fields/Cota_es_na_oportunidade__c.field-meta.xml
<CustomField>
    <fullName>Cota_es_na_oportunidade__c</fullName>
    <label>Cotações na oportunidade</label>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>