force-app/main/default/objects/Opportunity/fields/CotacaoPagamentoFuturo__c.field-meta.xml
<CustomField>
    <fullName>CotacaoPagamentoFuturo__c</fullName>
    <label>Cotação Pagamento Futuro</label>
    <summaryFilterItems>
        <field>Quote.PagamentoFuturo__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>