force-app/main/default/objects/Opportunity/fields/CotacaoSincronizada__c.field-meta.xml
<CustomField>
    <fullName>CotacaoSincronizada__c</fullName>
    <label>Cotação Sincronizada</label>
    <summaryFilterItems>
        <field>Quote.Sincronizado__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>