force-app/main/default/objects/Opportunity/fields/CotacaoVendaFutura__c.field-meta.xml
<CustomField>
    <fullName>CotacaoVendaFutura__c</fullName>
    <label>Cotação Venda Futura</label>
    <summaryFilterItems>
        <field>Quote.VendaFutura__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>