force-app/main/default/objects/Opportunity/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <description>Data da criação da oportunidade</description>
    <label>Data de criação</label>
    <type>DateTime</type>
</CustomField>