force-app/main/default/objects/Opportunity/fields/Data_mais_recente_de_proposta__c.field-meta.xml
<CustomField>
    <fullName>Data_mais_recente_de_proposta__c</fullName>
    <label>Data mais recente de proposta</label>
    <summarizedField>Quote.CreatedDate</summarizedField>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>