force-app/main/default/objects/Opportunity/fields/Desconto_total__c.field-meta.xml
<CustomField>
    <fullName>Desconto_total__c</fullName>
    <label>Desconto total</label>
    <summarizedField>Quote.ValorDesconto__c</summarizedField>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>