force-app/main/default/objects/Opportunity/fields/Emaill__c.field-meta.xml
<CustomField>
    <fullName>Emaill__c</fullName>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>