force-app/main/default/objects/Opportunity/fields/EndOfContractDate__c.field-meta.xml
<CustomField>
    <fullName>EndOfContractDate__c</fullName>
    <description>data de término do contrato</description>
    <label>Data de Término do Contrato</label>
    <type>Date</type>
</CustomField>