force-app/main/default/objects/Opportunity/fields/ExternalOpportunityID__c.field-meta.xml
<CustomField>
    <fullName>ExternalOpportunityID__c</fullName>
    <externalId>true</externalId>
    <label>External Opportunity ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>