force-app/main/default/objects/Opportunity/fields/Fbclid__c.field-meta.xml
<CustomField>
    <fullName>Fbclid__c</fullName>
    <description>Campo de mapeamento de clique em formulários Meta</description>
    <label>Fbclid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>