force-app/main/default/objects/Opportunity/fields/Forma_de_Pagamento__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_Pagamento__c</fullName>
    <label>Forma de Pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pix</fullName>
            </value>
            <value>
                <fullName>Cartão de Crédito</fullName>
            </value>
            <value>
                <fullName>Boleto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>