force-app/main/default/objects/Opportunity/fields/Formulario_Preenchido__c.field-meta.xml
<CustomField>
    <fullName>Formulario_Preenchido__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Formulário Preenchido</label>
    <type>Checkbox</type>
</CustomField>