force-app/main/default/objects/Opportunity/fields/Funnel__c.field-meta.xml
<CustomField>
    <fullName>Funnel__c</fullName>
    <description>Qual o funil da oportunidade?</description>
    <label>Funil</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Funil</valueSetName>
    </valueSet>
</CustomField>