force-app/main/default/objects/Opportunity/fields/Hor_rio_m_ximo_para_contato__c.field-meta.xml
<CustomField>
    <fullName>Hor_rio_m_ximo_para_contato__c</fullName>
    <formula>CreatedDate + (3/24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Horário máximo para contato</label>
    <type>DateTime</type>
</CustomField>