force-app/main/default/objects/Opportunity/fields/IsAceleraiAgenciasMembership__c.field-meta.xml
<CustomField>
    <fullName>IsAceleraiAgenciasMembership__c</fullName>
    <description>É assinante, ou não, do Aceleraí Agências?</description>
    <label>Faz parte do Aceleraí Agências?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_de_cliente__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>