force-app/main/default/objects/Opportunity/fields/Ja_foi_anunciante__c.field-meta.xml
<CustomField>
    <fullName>Ja_foi_anunciante__c</fullName>
    <label>Ja foi anunciante?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Não</fullName>
            </value>
            <value>
                <fullName>Sim, apenas mídia on</fullName>
            </value>
            <value>
                <fullName>Sim, apenas mídia off</fullName>
            </value>
            <value>
                <fullName>Sim, os dois</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>