force-app/main/default/objects/Opportunity/fields/LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDate__c</fullName>
    <description>Última modificação na oportunidade</description>
    <label>Data de modificação</label>
    <type>DateTime</type>
</CustomField>