force-app/main/default/objects/Opportunity/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <label>Lead Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>