force-app/main/default/objects/Opportunity/fields/LetraLeadScore__c.field-meta.xml
<CustomField>
    <fullName>LetraLeadScore__c</fullName>
    <label>LetraLeadScore</label>
    <length>1</length>
    <type>Text</type>
</CustomField>