force-app/main/default/objects/Opportunity/fields/Link_Oportunidade_SGC__c.field-meta.xml
<CustomField>
    <fullName>Link_Oportunidade_SGC__c</fullName>
    <formula>&apos;https://acelerai.sgc360.com/salesforce/oportunidade/&apos;+ CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link Oportunidade SGC</label>
    <type>Text</type>
</CustomField>