force-app/main/default/objects/Opportunity/fields/LinkOportunidadeSGCdesativado__c.field-meta.xml
<CustomField>
    <fullName>LinkOportunidadeSGCdesativado__c</fullName>
    <description>Campo carrega URL da oportunidade do SGC</description>
    <inlineHelpText>Campo carrega URL da oportunidade do SGC</inlineHelpText>
    <label>Link Oportunidade Original SGC</label>
    <type>Url</type>
</CustomField>