force-app/main/default/objects/Opportunity/fields/LinkOportunidadeVarejoSGC__c.field-meta.xml
<CustomField>
    <fullName>LinkOportunidadeVarejoSGC__c</fullName>
    <formula>HYPERLINK(&quot;https://acelerai.sgc360.com/salesforce/oportunidade/&quot; &amp; CASESAFEID(RelatedOpportunity__c), &quot;Clique aqui para ver a Oportunidade Relacionada&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link Oportunidade Varejo SGC</label>
    <type>Text</type>
</CustomField>