force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Motivo da Perda</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Achou produto caro</fullName>
            </value>
            <value>
                <fullName>Assédio</fullName>
            </value>
            <value>
                <fullName>Bloqueio do produto para o segmento</fullName>
            </value>
            <value>
                <fullName>Bloqueio estrela região</fullName>
            </value>
            <value>
                <fullName>Bloqueio estrela segmento</fullName>
            </value>
            <value>
                <fullName>Cliente com contrato cancelado</fullName>
            </value>
            <value>
                <fullName>Cliente declinou mídia previamente</fullName>
            </value>
            <value>
                <fullName>Cliente já faz mídia com agência homologada</fullName>
            </value>
            <value>
                <fullName>Cliente já faz mídia com outra agência</fullName>
            </value>
            <value>
                <fullName>Contrato vigente de mídia</fullName>
            </value>
            <value>
                <fullName>Curioso</fullName>
            </value>
            <value>
                <fullName>Dados de contato inválidos</fullName>
            </value>
            <value>
                <fullName>Estrela reprovou a campanha</fullName>
            </value>
            <value>
                <fullName>Estrela reprovou a venda</fullName>
            </value>
            <value>
                <fullName>Lead duplicado</fullName>
            </value>
            <value>
                <fullName>MÍDIA - segmento não elegível</fullName>
            </value>
            <value>
                <fullName>Não está no momento</fullName>
            </value>
            <value>
                <fullName>Não faz propaganda nos meios e peças atendidas</fullName>
            </value>
            <value>
                <fullName>Não gostou do produto/serviço</fullName>
            </value>
            <value>
                <fullName>Não tem CNPJ</fullName>
            </value>
            <value>
                <fullName>Não viu valor para o seu segmento</fullName>
            </value>
            <value>
                <fullName>Sem interesse pelo produto/serviço</fullName>
            </value>
            <value>
                <fullName>Sem recurso financeiro</fullName>
            </value>
            <value>
                <fullName>Sem redes sociais</fullName>
            </value>
            <value>
                <fullName>Sem retorno no follow</fullName>
            </value>
            <value>
                <fullName>Tentativas de contato sem sucesso</fullName>
            </value>
            <value>
                <fullName>Sem follow do vendedor</fullName>
            </value>
            <value>
                <fullName>Opt-out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>