force-app/main/default/objects/Opportunity/fields/Media__c.field-meta.xml
<CustomField>
    <fullName>Media__c</fullName>
    <label>Mídia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>