force-app/main/default/objects/Opportunity/fields/MediaChannelsUsed__c.field-meta.xml
<CustomField>
    <fullName>MediaChannelsUsed__c</fullName>
    <description>Quais formas de divulgação são utilizadas?</description>
    <label>Meios de divulgação que utiliza</label>
    <length>255</length>
    <type>Text</type>
</CustomField>