force-app/main/default/objects/Opportunity/fields/Metalead_id__c.field-meta.xml
<CustomField>
    <fullName>Metalead_id__c</fullName>
    <description>Lead ID vindo do lead via integração MetaAds</description>
    <externalId>true</externalId>
    <label>Meta Lead id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>