force-app/main/default/objects/Opportunity/fields/MonthlyInvestmentMedia_Content__c.field-meta.xml
<CustomField>
    <fullName>MonthlyInvestmentMedia_Content__c</fullName>
    <label>Investimento mensal em mídia/conteúdo?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Não Invisto</fullName>
            </value>
            <value>
                <fullName>Entre 1k - 3k</fullName>
            </value>
            <value>
                <fullName>Entre 4k - 10k</fullName>
            </value>
            <value>
                <fullName>Entre 11k - 30k</fullName>
            </value>
            <value>
                <fullName>Mais de 30k</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>