force-app/main/default/objects/Opportunity/fields/NitzapWhatsAppId__c.field-meta.xml
<CustomField>
    <fullName>NitzapWhatsAppId__c</fullName>
    <formula>ContactId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NitzapWhatsAppId</label>
    <type>Text</type>
</CustomField>