force-app/main/default/objects/Opportunity/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Campo livre para observações da oportunidade.</description>
    <label>Observações</label>
    <length>255</length>
    <type>Text</type>
</CustomField>