force-app/main/default/objects/Opportunity/fields/Novo_Tipo__c.field-meta.xml
<CustomField>
    <fullName>Novo_Tipo__c</fullName>
    <description>Tipo - mapeamento Lead para Oportunidade</description>
    <label>Novo Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing Business</fullName>
            </value>
            <value>
                <fullName>Reprospecção</fullName>
            </value>
            <value>
                <fullName>Negociação Futura</fullName>
            </value>
            <value>
                <fullName>Redistribuição</fullName>
            </value>
            <value>
                <fullName>Repescagem</fullName>
            </value>
            <value>
                <fullName>QRCode</fullName>
            </value>
            <value>
                <fullName>Blitz - Black Friday 2024</fullName>
            </value>
            <value>
                <fullName>Renovação/Upsell base RD</fullName>
            </value>
            <value>
                <fullName>Repescagem - tentativas de contato</fullName>
            </value>
            <value>
                <fullName>New Business</fullName>
                <isActive>false</isActive>
                <label>New Business</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>