force-app/main/default/objects/Opportunity/fields/OpportunityEntryDates_byStage__c.field-meta.xml
<CustomField>
    <fullName>OpportunityEntryDates_byStage__c</fullName>
    <label>Datas entrada da oportunidade por etapa</label>
    <type>DateTime</type>
</CustomField>