force-app/main/default/objects/Opportunity/fields/Outras_opcoes_de_celebridade__c.field-meta.xml
<CustomField>
    <fullName>Outras_opcoes_de_celebridade__c</fullName>
    <label>Outras opções de celebridade</label>
    <type>TextArea</type>
</CustomField>