force-app/main/default/objects/Opportunity/fields/PaymentLink_sendingDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentLink_sendingDate__c</fullName>
    <label>Data de envio do link de pagamento</label>
    <type>Date</type>
</CustomField>