force-app/main/default/objects/Opportunity/fields/Pol_tica_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Pol_tica_Comercial__c</fullName>
    <label>Política Comercial</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Preço normal</fullName>
            </value>
            <value>
                <fullName>Pack de cidades (P0, P01 e P02)</fullName>
            </value>
            <value>
                <fullName>P0, P01, P02 com 50% de desconto</fullName>
            </value>
            <value>
                <fullName>70% de desconto</fullName>
            </value>
            <value>
                <fullName>25% off - bônus sobre total</fullName>
            </value>
            <value>
                <fullName>35% off - bônus sobre total</fullName>
            </value>
            <value>
                <fullName>50% off - bônus sobre total</fullName>
            </value>
            <value>
                <fullName>50% de desconto</fullName>
            </value>
            <value>
                <fullName>40% de desconto</fullName>
            </value>
            <value>
                <fullName>30% de desconto</fullName>
            </value>
            <value>
                <fullName>Bônus de R$ 10k</fullName>
            </value>
            <value>
                <fullName>Casting e Comunicadores</fullName>
            </value>
            <value>
                <fullName>Estrela da Semana</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>