force-app/main/default/objects/Opportunity/fields/Pracas_Bonificacao_Midia__c.field-meta.xml
<CustomField>
    <fullName>Pracas_Bonificacao_Midia__c</fullName>
    <label>Praças Bonificação Mídia</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC - ACRE</fullName>
            </value>
            <value>
                <fullName>AC - CRUZEIRO DO SUL</fullName>
            </value>
            <value>
                <fullName>AL - MACEIÓ</fullName>
            </value>
            <value>
                <fullName>AM - MANAUS</fullName>
            </value>
            <value>
                <fullName>AM - PARINTINS</fullName>
            </value>
            <value>
                <fullName>AM - TEFÉ</fullName>
            </value>
            <value>
                <fullName>AP - MACAPÁ</fullName>
            </value>
            <value>
                <fullName>BA - SALVADOR</fullName>
            </value>
            <value>
                <fullName>CE - CEARÁ - ESTADO</fullName>
            </value>
            <value>
                <fullName>DF - BRASÍLIA</fullName>
            </value>
            <value>
                <fullName>ES - ESPÍRITO SANTO - ESTADO</fullName>
            </value>
            <value>
                <fullName>GO - GOIÂNIA</fullName>
            </value>
            <value>
                <fullName>MA - SÃO LUIS</fullName>
            </value>
            <value>
                <fullName>MG - BELO HORIZONTE</fullName>
            </value>
            <value>
                <fullName>MG - DIVINÓPOLIS</fullName>
            </value>
            <value>
                <fullName>MG - ITUIUTABA</fullName>
            </value>
            <value>
                <fullName>MG - JUIZ DE FORA</fullName>
            </value>
            <value>
                <fullName>MG - MANHUAÇU</fullName>
            </value>
            <value>
                <fullName>MG - VARGINHA</fullName>
            </value>
            <value>
                <fullName>MS - CAMPO GRANDE</fullName>
            </value>
            <value>
                <fullName>MT - ALTA FLORESTA</fullName>
            </value>
            <value>
                <fullName>MT - BARRA DOS GARÇAS</fullName>
            </value>
            <value>
                <fullName>MT - CÁCERES</fullName>
            </value>
            <value>
                <fullName>MT - CAMPO VERDE</fullName>
            </value>
            <value>
                <fullName>MT - COLÍDER</fullName>
            </value>
            <value>
                <fullName>MT - CUIABÁ</fullName>
            </value>
            <value>
                <fullName>MT - MATUPÁ</fullName>
            </value>
            <value>
                <fullName>MT - NOVA MUTUM</fullName>
            </value>
            <value>
                <fullName>MT - PONTES E LACERDA</fullName>
            </value>
            <value>
                <fullName>MT - RONDONÓPOLIS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>